force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <label>訂閱</label>
    <nameField>
        <displayFormat>{YY}{MM}{DD}{000}</displayFormat>
        <label>訂單編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>