force-app/main/default/objects/Subscription__c/fields/AccountStandard__c.field-meta.xml
<CustomField>
    <fullName>AccountStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountStandard</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>訂閱</relationshipLabel>
    <relationshipName>SubAcc</relationshipName>
    <type>Lookup</type>
</CustomField>