force-app/main/default/objects/Subscription__c/fields/Address_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Address_Invoice__c</fullName>
    <label>發票寄送地址</label>
    <length>50</length>
    <type>Text</type>
</CustomField>