force-app/main/default/objects/Subscription__c/fields/Area_picklist__c.field-meta.xml
<CustomField>
    <fullName>Area_picklist__c</fullName>
    <label>地區(選項)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City_picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>中正區</fullName>
            </value>
            <value>
                <fullName>大同區</fullName>
            </value>
            <value>
                <fullName>中山區</fullName>
            </value>
            <value>
                <fullName>松山區</fullName>
            </value>
            <value>
                <fullName>大安區</fullName>
            </value>
            <value>
                <fullName>萬華區</fullName>
            </value>
            <value>
                <fullName>信義區</fullName>
            </value>
            <value>
                <fullName>士林區</fullName>
            </value>
            <value>
                <fullName>北投區</fullName>
            </value>
            <value>
                <fullName>內湖區</fullName>
            </value>
            <value>
                <fullName>南港區</fullName>
            </value>
            <value>
                <fullName>文山區</fullName>
            </value>
            <value>
                <fullName>仁愛區</fullName>
            </value>
            <value>
                <fullName>安樂區</fullName>
            </value>
            <value>
                <fullName>暖暖區</fullName>
            </value>
            <value>
                <fullName>七堵區</fullName>
            </value>
            <value>
                <fullName>南竿鄉</fullName>
            </value>
            <value>
                <fullName>北竿鄉</fullName>
            </value>
            <value>
                <fullName>莒光鄉</fullName>
            </value>
            <value>
                <fullName>東引鄉</fullName>
            </value>
            <value>
                <fullName>萬里區</fullName>
            </value>
            <value>
                <fullName>金山區</fullName>
            </value>
            <value>
                <fullName>板橋區</fullName>
            </value>
            <value>
                <fullName>汐止區</fullName>
            </value>
            <value>
                <fullName>深坑區</fullName>
            </value>
            <value>
                <fullName>石碇區</fullName>
            </value>
            <value>
                <fullName>瑞芳區</fullName>
            </value>
            <value>
                <fullName>平溪區</fullName>
            </value>
            <value>
                <fullName>雙溪區</fullName>
            </value>
            <value>
                <fullName>貢寮區</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>