force-app/main/default/objects/Subscription__c/fields/City_picklist__c.field-meta.xml
<CustomField>
    <fullName>City_picklist__c</fullName>
    <label>縣市(選項)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>台北市</fullName>
            </value>
            <value>
                <fullName>基隆市</fullName>
            </value>
            <value>
                <fullName>新北市</fullName>
            </value>
            <value>
                <fullName>連江縣</fullName>
            </value>
            <value>
                <fullName>宜蘭縣</fullName>
            </value>
            <value>
                <fullName>新竹市</fullName>
            </value>
            <value>
                <fullName>新竹縣</fullName>
            </value>
            <value>
                <fullName>桃園市</fullName>
            </value>
            <value>
                <fullName>苗栗縣</fullName>
            </value>
            <value>
                <fullName>台中市</fullName>
            </value>
            <value>
                <fullName>彰化縣</fullName>
            </value>
            <value>
                <fullName>南投縣</fullName>
            </value>
            <value>
                <fullName>嘉義市</fullName>
            </value>
            <value>
                <fullName>嘉義縣</fullName>
            </value>
            <value>
                <fullName>雲林縣</fullName>
            </value>
            <value>
                <fullName>台南市</fullName>
            </value>
            <value>
                <fullName>高雄市</fullName>
            </value>
            <value>
                <fullName>澎湖縣</fullName>
            </value>
            <value>
                <fullName>金門縣</fullName>
            </value>
            <value>
                <fullName>屏東縣</fullName>
            </value>
            <value>
                <fullName>台東縣</fullName>
            </value>
            <value>
                <fullName>花蓮縣</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>