force-app/main/default/objects/Subscription__c/fields/Company_name__c.field-meta.xml
<CustomField>
    <fullName>Company_name__c</fullName>
    <label>公司抬頭</label>
    <length>50</length>
    <type>Text</type>
</CustomField>