force-app/main/default/objects/Subscription__c/fields/CustomAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomAccount__c</fullName>
    <label>帳戶</label>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>訂閱</relationshipLabel>
    <relationshipName>AccSub</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>