force-app/main/default/objects/Subscription__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>收件人電子郵件</label>
    <type>Email</type>
</CustomField>