force-app/main/default/objects/Subscription__c/fields/End_period__c.field-meta.xml
<CustomField>
    <fullName>End_period__c</fullName>
    <label>訂閱結束期數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>