force-app/main/default/objects/Subscription__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <label>電話</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>