force-app/main/default/objects/Subscription__c/fields/isInvoice__c.field-meta.xml
<CustomField>
    <fullName>isInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>開立發票</label>
    <type>Checkbox</type>
</CustomField>