force-app/main/default/objects/Subscription__c/fields/isReplenish__c.field-meta.xml
<CustomField>
    <fullName>isReplenish__c</fullName>
    <defaultValue>true</defaultValue>
    <label>自動續訂</label>
    <type>Checkbox</type>
</CustomField>