force-app/main/default/objects/Subscription__c/fields/memberInfo__c.field-meta.xml
<CustomField>
    <fullName>memberInfo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>同會員帳戶資料</label>
    <type>Checkbox</type>
</CustomField>