force-app/main/default/objects/Subscription__c/fields/Not_received__c.field-meta.xml
<CustomField>
    <fullName>Not_received__c</fullName>
    <label>沒收到次數</label>
    <length>10</length>
    <type>Text</type>
</CustomField>