force-app/main/default/objects/Subscription__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>備註</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>