force-app/main/default/objects/Subscription__c/fields/Order_date__c.field-meta.xml
<CustomField>
    <fullName>Order_date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>訂單日期</label>
    <type>Date</type>
</CustomField>