force-app/main/default/objects/Subscription__c/fields/Payment_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_date__c</fullName>
    <label>付款日期</label>
    <type>Date</type>
</CustomField>