force-app/main/default/objects/Subscription__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>付款方式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>信用卡</fullName>
            </value>
            <value>
                <fullName>超商付款</fullName>
            </value>
            <value>
                <fullName>ATM轉帳</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>