force-app/main/default/objects/Subscription__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <label>付款狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>paymentpending</fullName>
                <default>true</default>
                <label>待付款</label>
            </value>
            <value>
                <fullName>paymentdone</fullName>
                <label>已付款</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>