force-app/main/default/objects/Subscription__c/fields/PaymentInformation__c.field-meta.xml
<CustomField>
    <fullName>PaymentInformation__c</fullName>
    <label>PaymentInformation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>