force-app/main/default/objects/Subscription__c/fields/Postal_code__c.field-meta.xml
<CustomField>
    <fullName>Postal_code__c</fullName>
    <label>郵遞區號</label>
    <length>10</length>
    <type>Text</type>
</CustomField>