force-app/main/default/objects/Subscription__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>訂閱方案</label>
    <referenceTo>SubscriptionProgram__c</referenceTo>
    <relationshipLabel>訂閱</relationshipLabel>
    <relationshipName>Subscription_Program</relationshipName>
    <type>Lookup</type>
</CustomField>