force-app/main/default/objects/Subscription__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <label>收件人名稱</label>
    <length>50</length>
    <type>Text</type>
</CustomField>