force-app/main/default/objects/Subscription__c/fields/Send_unit__c.field-meta.xml
<CustomField>
    <fullName>Send_unit__c</fullName>
    <label>寄送單位</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>大安(中正大安)</fullName>
            </value>
            <value>
                <fullName>和昇(信義松山)</fullName>
            </value>
            <value>
                <fullName>飛龍(文山)</fullName>
            </value>
            <value>
                <fullName>汐止(南港汐止)</fullName>
            </value>
            <value>
                <fullName>集美石牌(士林北投)</fullName>
            </value>
            <value>
                <fullName>集美石牌(三重)</fullName>
            </value>
            <value>
                <fullName>日昌(中和永和)</fullName>
            </value>
            <value>
                <fullName>同同</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>