force-app/main/default/objects/Subscription__c/fields/Start_period__c.field-meta.xml
<CustomField>
    <fullName>Start_period__c</fullName>
    <label>訂閱開始期數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>