force-app/main/default/objects/Subscription__c/fields/Subscription_item__c.field-meta.xml
<CustomField>
    <fullName>Subscription_item__c</fullName>
    <label>訂閱方案</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>訂閱10期 800元</fullName>
                <default>true</default>
                <label>訂閱10期 800元</label>
            </value>
            <value>
                <fullName>訂閱5期 400元</fullName>
            </value>
            <value>
                <fullName>訂閱20期 1600元</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>