force-app/main/default/objects/Subscription__c/fields/Subscription_status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_status__c</fullName>
    <label>訂閱狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>訂單成立</fullName>
                <default>true</default>
                <label>訂單成立</label>
            </value>
            <value>
                <fullName>訂閱中</fullName>
            </value>
            <value>
                <fullName>結案</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>