force-app/main/default/objects/Subscription__c/fields/Testshowinfo__c.field-meta.xml
<CustomField>
    <fullName>Testshowinfo__c</fullName>
    <formula>CustomAccount__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Testshowinfo</label>
    <type>Text</type>
</CustomField>